fdo#42122 - truncate files that shrink to avoid dictionary corruption.

fixes a nasty apparently introduced by 7e01bc8d28ffefd4539a5eae2587e1f7da0999e7

Change-Id: I8227cb49a5dfa885d4dc38ce353a356bb5ed8a69